fixed overlap between text display and text area

--- a/static/style.css
+++ b/static/style.css
@@ -9,13 +9,9 @@ body{
 }
 
 .text-display{
-    line-height: 1.5em;       
-    height: 4.5em;            
-    overflow: hidden;         
-    font-size: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: left;
+    position: relative;
+    font-size: 24px;     
+    display: block;
 }
 
 .char{
